<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@android:id/tabhost"
    android:background="@drawable/background1">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@android:id/tabcontent"/>
            <TabWidget
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:visibility="gone"
                android:id="@android:id/tabs"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <RadioButton
                        android:id="@+id/Tabs_weather"
                        android:layout_marginTop="2dp"
                        android:text="@string/tabs_weather"
                        android:drawableTop="@drawable/weather"
                        style="@style/Tab_button_type"
                        />
                    <RadioButton
                        android:id="@+id/Tabs_analyze"
                        android:layout_marginTop="2dp"
                        android:text="@string/tabs_analyze"
                        android:drawableTop="@drawable/line_graph"
                        style="@style/Tab_button_type"
                         />
                    <RadioButton
                        android:id="@+id/Tabs_logcontent"
                        android:layout_marginTop="2dp"
                        android:text="@string/tabs_logcontent"
                        android:drawableTop="@drawable/logcontent"
                        style="@style/Tab_button_type"
                         />
                    <RadioButton
                        android:id="@+id/Tabs_contact"
                        android:text="@string/tabs_getcontact"
                        android:layout_marginTop="2dp"
                        android:drawableTop="@drawable/contacts"
                        style="@style/Tab_button_type"
                         />
                </RadioGroup>
    </LinearLayout>
</TabHost>